[package]
name = "BetterWx-starter"
version = "0.0.1"
edition = "2024"

[build-dependencies]
winres = "0.1.12"

[dependencies]
anyhow = "1.0.98"
ini = "1.3.0"
windows = { version = "^0.60", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemInformation"
]}
widestring = "1.2.0"
